# potatoes

./: .gitlab-ci.yml  CMakeLists.txt
data/: net.dosowisko.potatoes.appdata.xml  potatoes.autosave.h2song  potatoes.desktop  potatoes.h2song
data/fonts/: README
data/icons/: icon.rc  potatoes.icns
data/p0/: 1.flac  2.flac  3.flac  4.flac  5.flac
data/p1/: 1.flac  2.flac  3.flac  4.flac  5.flac
data/p2/: 1.flac  2.flac  3.flac  4.flac  5.flac
data/p3/: 1.flac  2.flac  3.flac  4.flac  5.flac
data/p4/: 1.flac  2.flac  3.flac  4.flac  5.flac
data/p5/: 1.flac  2.flac  3.flac  4.flac  5.flac
data/p6/: 1.flac  2.flac  3.flac  4.flac  5.flac
data/p7/: 1.flac  2.flac  3.flac  4.flac  5.flac
data/sprites/face/: 1.ini  2.ini  off.ini
data/sprites/potato/: 0.ini  1.ini  2.ini  3.ini  4.ini  5.ini  6.ini  7.ini
flatpak/: net.dosowisko.potatoes.json
src/: common.c  common.h  main.c
src/gamestates/: dosowisko.c  game.c  holypangolin.c  loading.c
